# ppersist

./: .gitignore  LICENSE  README.md  pyproject.toml
src/daw/: ppersist.py
src/ppersist/: __init__.py  ppersist.py
src/tests/: test_ppersist.py
tools/: pypipush.sh
