[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ppersist"
authors = [
    {name = "Daniel Wagenaar", email = "daw@caltech.edu"},
]
description = "Convenient long-term storage of python data"
readme = "README.md"
version = "0.9.0"
dependencies = [
    "numpy",
    "pandas",
]
