[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ppersist"
authors = [
    {name = "Daniel Wagenaar", email = "daw@caltech.edu"},
]
description = "Convenient long-term storage of python data"
readme = "README.md"
version = "0.10.2"

dependencies = [
    "numpy",
    "pandas",
]
requires-python = ">=3.8"
classifiers = [ 
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/wagenadl/ppersist"

